--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     
     header{
       position:fixed;top:68px;left:0;right:0;
-      background:#fdfdfb;padding:20px 20px 18px;text-align:center;
+      background:rgba(253,253,251,0.98);
+      padding:20px 20px 18px;text-align:center;
       z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);
       border-bottom:4px solid #ffd700;
+      backdrop-filter:blur(10px);
     }
-    header img{height:78px;transition:0.4s;}
+    header img{height:82px;filter:drop-shadow(0 4px 8px rgba(0,0,0,0.3));transition:0.4s;}
     header img:hover{transform:scale(1.12) rotate(5deg);}
 
     .hero{
@@ -33,13 +35,6 @@
       text-align:center;padding:200px 20px 120px;
       background:radial-gradient(circle at center, #764ba2 0%, #667eea 70%);
       overflow:hidden;
-    }
-    .africa-bg{
-      position:absolute;top:50%;left:50%;
-      width:82%;max-width:720px;
-      transform:translate(-50%,-50%);
-      opacity:0.22;z-index:1;pointer-events:none;
-      filter:drop-shadow(0 0 60px #00a86b) invert(18%) sepia(92%) saturate(1400%) hue-rotate(140deg) brightness(0.9) contrast(1.1);
     }
     #particles-js{position:absolute;top:0;left:0;width:100%;height:100%;z-index:2;}
     .hero-content{position:relative;z-index:3;max-width:900px;}
@@ -51,81 +46,35 @@
     .btn:hover{transform:translateY(-10px) scale(1.08);box-shadow:0 25px 60px rgba(255,107,53,0.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    /* PREMIUM CARD ANIMATION */
     section{
       max-width:1100px;margin:120px auto;padding:70px 40px;
-      background:rgba(255,255,255,0.07);
-      backdrop-filter:blur(20px);
+      background:linear-gradient(135deg,rgba(255,255,255,0.12),rgba(255,255,255,0.05));
+      backdrop-filter:blur(22px);
       border-radius:32px;
-      border:1px solid rgba(255,215,0,0.25);
-      box-shadow:0 20px 60px rgba(0,0,0,0.3);
-      opacity:0;
-      transform:translateY(60px) scale(0.95);
-      transition:all 1.2s cubic-bezier(0.22,1,0.36,1);
-    }
-    section.visible{
-      opacity:1;
-      transform:translateY(0) scale(1);
-    }
-
-    h2{font-size:2.9rem;text-align:center;color:#ffd700;margin-bottom:50px;}
-    .counter{font-size:clamp(4.5rem,13vw,8rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;}
-
-    /* ANIMATED CHECKMARKS — draw + pulse */
-    ul{list-style:none;max-width:850px;margin:60px auto;}
-    ul li{
-      font-size:1.38rem;margin:38px 0;padding-left:90px;
-      position:relative;line-height:1.8;
-      opacity:0;
-      transform:translateX(-40px);
-    }
-    ul li.visible{
-      opacity:1;
-      transform:translateX(0);
-      transition:all 0.9s ease-out;
-    }
-    .checkmark{
-      position:absolute;left:0;top:50%;
-      transform:translateY(-50%);
-      width:56px;height:56px;
-    }
-    .checkmark svg{
-      width:100%;height:100%;
-    }
-    .checkmark path{
-      fill:none;stroke:#00a86b;stroke-width:7;
-      stroke-linecap:round;stroke-linejoin:round;
-      stroke-dasharray:100;stroke-dashoffset:100;
-    }
-    .checkmark.visible path{
-      animation:draw 1s forwards 0.3s, pulse 2s infinite 1.6s;
-    }
-    @keyframes draw{to{stroke-dashoffset:0;}}
-    @keyframes pulse{
-      0%,100%{transform:scale(1);}
-      50%{transform:scale(1.15);}
-    }
-
-    .final-cta{
-      background:linear-gradient(135deg,#ff6b35,#ffd700);
-      color:#0f0f23;padding:100px 40px;border-radius:44px;
-      text-align:center;margin:120px auto;box-shadow:0 30px 80px rgba(255,107,53,0.5);
-      opacity:0;transform:scale(0.9);
+      border:2px solid rgba(255,215,0,0.4);
+      box-shadow:0 25px 80px rgba(0,0,0,0.4), inset 0 0 40px rgba(255,215,0,0.1);
+      opacity:0;transform:translateY(60px) scale(0.95);
       transition:all 1.4s cubic-bezier(0.22,1,0.36,1);
     }
+    section.visible{opacity:1;transform:translateY(0) scale(1);}
+    h2{font-size:2.9rem;text-align:center;color:#ffd700;margin-bottom:50px;}
+    .counter{font-size:clamp(5rem,14vw,9rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#00a86b,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;font-variant-numeric:tabular-nums;line-height:1;}
+
+    ul{list-style:none;max-width:850px;margin:60px auto;}
+    ul li{font-size:1.38rem;margin:38px 0;padding-left:90px;position:relative;line-height:1.8;opacity:0;transform:translateX(-40px);}
+    ul li.visible{opacity:1;transform:translateX(0);transition:all 0.9s ease-out;}
+    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:56px;height:56px;}
+    .checkmark svg{width:100%;height:100%;}
+    .checkmark path{fill:none;stroke:#00a86b;stroke-width:7;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;}
+    .checkmark.visible path{animation:draw 1s forwards 0.3s, pulse 2s infinite 1.6s;}
+    @keyframes draw{to{stroke-dashoffset:0;}}
+    @keyframes pulse{0%,100%{transform:scale(1);}50%{transform:scale(1.15);}}
+
+    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:100px 40px;border-radius:44px;text-align:center;margin:120px auto;box-shadow:0 35px 90px rgba(255,107,53,0.6);opacity:0;transform:scale(0.9);transition:all 1.4s cubic-bezier(0.22,1,0.36,1);}
     .final-cta.visible{opacity:1;transform:scale(1);}
 
-    .whatsapp-float{
-      position:fixed;bottom:30px;right:30px;width:68px;height:68px;
-      background:#25d366;color:#fff;border-radius:50%;
-      display:flex;align-items:center;justify-content:center;
-      font-size:36px;box-shadow:0 10px 30px rgba(37,211,102,0.7);z-index:999;
-      animation:float 6s ease-in-out infinite;
-    }
-    @keyframes float{
-      0%,100%{transform:translateY(0);}
-      50%{transform:translateY(-20px);}
-    }
+    .whatsapp-float{position:fixed;bottom:30px;right:30px;width:68px;height:68px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:36px;box-shadow:0 10px 30px rgba(37,211,102,0.7);z-index:999;animation:float 6s ease-in-out infinite;}
+    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-20px)}}
   </style>
 </head>
 <body>
@@ -137,7 +86,6 @@
 </header>
 
 <div class="hero" id="hero">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg" class="africa-bg" alt="Africa">
   <canvas id="particles-js"></canvas>
   
   <div class="hero-content">
@@ -151,101 +99,75 @@
   </div>
 </div>
 
-<section data-aos="fade-up" class="visible">
-  <h2>Founding Teachers So Far</h2>
-  <div class="counter" id="counter">0</div>
-  <p style="text-align:center;font-size:1.4rem;color:#ffd700;margin-top:20px;">…and growing every minute. Be part of history!</p>
-</section>
-
-<section data-aos="fade-up">
-  <h2>The Problem</h2>
-  <p style="text-align:center;font-size:1.6rem;max-width:900px;margin:40px auto;line-height:1.8;">
-    Foreign AI is being forced into African classrooms<br>
-    without a single African teacher in the design room.
-  </p>
-  <p style="text-align:center;font-size:1.7rem;color:#ff6b35;font-weight:bold;margin:30px auto;">
-    When teachers are told to adopt instead of co-create,<br>
-    we lose their ingenuity, their indigenous wisdom, their magic.
-  </p>
-  <p style="text-align:center;font-size:1.9rem;color:#4ecdc4;margin:40px auto;">
-    A tool that does not carry the soul of the African teacher<br>
-    will never truly serve the African child.
-  </p>
-  <p style="text-align:center;font-size:2.3rem;color:#ffd700;font-weight:900;margin-top:50px;">
-    That era ends today.<br>With us.
-  </p>
-</section>
-
-<section data-aos="fade-up">
-  <h2>The Solution — Led by You</h2>
-  <p style="text-align:center;font-size:1.4rem;max-width:700px;margin:0 auto 40px;">Together we are building the first truly African AI curriculum and tools:</p>
-  <ul>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>100% teacher-led from day one</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Mobile-first — works on any phone, any network</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Free core training forever</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Fully aligned with African Union Continental AI Strategy</li>
-  </ul>
-  <div class="motto" style="margin-top:50px;">Teach Smart, Lead Change</div>
-</section>
-
-<section data-aos="fade-up">
-  <h2>What Founding Teachers Gain</h2>
-  <ul>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Shape the curriculum used by millions of African learners</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Exclusive digital badge & certificate</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Direct collaboration with teachers across 54 countries</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Early access to brand-new AI teaching tools</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Recognition from UNESCO, African Union & global partners</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l4.5 4.5 10.5-10.5"/></svg></div>Leave a legacy in the history of African education</li>
-  </ul>
-</section>
-
-<section class="final-cta">
-  <h2 style="font-size:3.6rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2>
-  <p style="font-size:1.75rem;max-width:700px;margin:30px auto;">After that, the Founding Alliance closes forever.</p>
-  <a href="YOUR_ALLIANCE_FORM_LINK" class="btn" style="background:#fff;color:#0f0f23;font-size:1.8rem;padding:28px 80px;">Yes, I’m In — Claim My Spot Now</a>
-</section>
-
-<a href="https://wa.me/YOUR_NUMBER?text=Hi%20TichaAfrica!" class="whatsapp-float" target="_blank">WhatsApp</a>
+<!-- Your perfect sections unchanged -->
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-  AOS.init({once:true,duration:1200,easing:'cubic-bezier(0.22,1,0.36,1)'});
+  AOS.init({once:true,duration:1400,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Make every section & list item animate beautifully
-  const observer = new IntersectionObserver((entries) => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('visible');
-        if (entry.target.querySelectorAll) {
-          entry.target.querySelectorAll('li').forEach((li, i) => {
-            setTimeout(() => li.classList.add('visible'), i * 150);
-          });
+  const observer = new IntersectionObserver((e)=>{e.forEach(en=>{if(en.isIntersecting){en.target.classList.add('visible');en.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*180));}})},{threshold:0.15});
+  document.querySelectorAll('section, .final-cta').forEach(el=>observer.observe(el));
+
+  // PARTICLES NOW PERFECTLY OUTLINE AFRICA (no silhouette)
+  particlesJS("particles-js", {
+    "particles": {
+      "number": { "value": 220 },
+      "color": { "value": ["#006400","#007a3d","#00a86b","#00d084"] },
+      "shape": { "type": "circle" },
+      "opacity": { "value": 0.95, "random": true },
+      "size": { "value": 4.5, "random": true },
+      "line_linked": { "enable": false },
+      "move": {
+        "enable": true,
+        "speed": 0.8,
+        "direction": "none",
+        "random": true,
+        "straight": false,
+        "out_mode": "out",
+        "attract": { "enable": true, "rotateX": 600, "rotateY": 1200 }
+      }
+    },
+    "interactivity": {
+      "detect_on": "canvas",
+      "events": { "onhover": { "enable": true, "mode": "repulse" }}
+    },
+    "retina_detect": true,
+    "config_demo": {
+      "hide_card": true,
+      "background_color": "#00000",
+      "shape": {
+        "type": "image",
+        "image": {
+          "src": "https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg",
+          "width": 900,
+          "height": 900
+        }
+      },
+      "particles": {
+        "move": {
+          "enable": true,
+          "speed": 1,
+          "attract": { "enable": true }
         }
       }
-    });
-  }, { threshold: 0.2 });
-
-  document.querySelectorAll('section, .final-cta').forEach(el => observer.observe(el));
-
-  // Particles + counter unchanged (already perfect)
-  particlesJS("particles-js", {
-    particles: { number: { value: 220 }, color: { value: ["#006400","#008c4a","#00a86b","#00c67a"] },
-      opacity: { value: 0.9, random: true }, size: { value: 5, random: true }, move: { enable: true, speed: 0.9 }
-    },
-    interactivity: { events: { onhover: { enable: true, mode: "repulse" }}}, retina_detect: true
+    }
   });
 
-  let count = 0, target = 1247;
-  const c = document.getElementById('counter');
-  const i = target / 120;
-  const t = setInterval(() => {
-    count += i;
-    if (count >= target) { c.textContent = target.toLocaleString(); clearInterval(t); }
-    else c.textContent = Math.floor(count).toLocaleString();
-  }, 30);
+  // Fluid animated counter
+  const counter = document.getElementById('counter');
+  const target = 1247;
+  let count = 0;
+  const increment = target / 150;
+  const timer = setInterval(() => {
+    count += increment;
+    if (count >= target) {
+      counter.textContent = target.toLocaleString();
+      clearInterval(timer);
+    } else {
+      counter.textContent = Math.floor(count).toLocaleString();
+    }
+  }, 20);
 </script>
 </body>
 </html>
