--- a/index.html
+++ b/index.html
@@ -10,22 +10,9 @@
     *{margin:0;padding:0;box-sizing:border-box;}
     body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;overflow-x:hidden;}
     
-    .urgency{
-      position:fixed;top:0;left:0;right:0;
-      background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);
-      color:#0f0f23;padding:16px 20px;
-      font-weight:bold;font-size:1.3rem;text-align:center;
-      z-index:1002;box-shadow:0 4px 20px rgba(0,0,0,0.4);
-    }
+    .urgency{position:fixed;top:0;left:0;right:0;background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);color:#0f0f23;padding:16px 20px;font-weight:bold;font-size:1.3rem;text-align:center;z-index:1002;box-shadow:0 4px 20px rgba(0,0,0,0.4);}
     
-    header{
-      position:fixed;top:68px;left:0;right:0;
-      background:rgba(253,253,251,0.98);
-      padding:20px 20px 18px;text-align:center;
-      z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);
-      border-bottom:4px solid #ffd700;
-      backdrop-filter:blur(10px);
-    }
+    header{position:fixed;top:68px;left:0;right:0;background:rgba(253,253,251,0.98);padding:20px 20px 18px;text-align:center;z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);border-bottom:4px solid #ffd700;backdrop-filter:blur(10px);}
     header img{height:82px;filter:drop-shadow(0 4px 8px rgba(0,0,0,0.3));transition:0.4s;}
     header img:hover{transform:scale(1.12) rotate(5deg);}
 
@@ -35,8 +22,12 @@
       text-align:center;padding:200px 20px 120px;
       background:radial-gradient(circle at center, #764ba2 0%, #667eea 70%);
       overflow:hidden;
+      perspective:1500px;
     }
-    #particles-js{position:absolute;top:0;left:0;width:100%;height:100%;z-index:2;}
+    #particles-js{
+      position:absolute;top:0;left:0;width:100%;height:120%;z-index:2;
+      transform:translateZ(-100px) scale(1.1);
+    }
     .hero-content{position:relative;z-index:3;max-width:900px;}
 
     .hero h1{font-size:clamp(2.8rem,8vw,5rem);margin-bottom:20px;line-height:1.1;text-shadow:0 0 40px rgba(255,215,0,0.8);}
@@ -46,16 +37,7 @@
     .btn:hover{transform:translateY(-10px) scale(1.08);box-shadow:0 25px 60px rgba(255,107,53,0.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    section{
-      max-width:1100px;margin:120px auto;padding:70px 40px;
-      background:linear-gradient(135deg,rgba(255,255,255,0.12),rgba(255,255,255,0.05));
-      backdrop-filter:blur(22px);
-      border-radius:32px;
-      border:2px solid rgba(255,215,0,0.4);
-      box-shadow:0 25px 80px rgba(0,0,0,0.4), inset 0 0 40px rgba(255,215,0,0.1);
-      opacity:0;transform:translateY(60px) scale(0.95);
-      transition:all 1.4s cubic-bezier(0.22,1,0.36,1);
-    }
+    section{max-width:1100px;margin:120px auto;padding:70px 40px;background:linear-gradient(135deg,rgba(255,255,255,0.12),rgba(255,255,255,0.05));backdrop-filter:blur(22px);border-radius:32px;border:2px solid rgba(255,215,0,0.4);box-shadow:0 25px 80px rgba(0,0,0,0.4), inset 0 0 40px rgba(255,215,0,0.1);opacity:0;transform:translateY(60px) scale(0.95);transition:all 1.4s cubic-bezier(0.22,1,0.36,1);}
     section.visible{opacity:1;transform:translateY(0) scale(1);}
     h2{font-size:2.9rem;text-align:center;color:#ffd700;margin-bottom:50px;}
     .counter{font-size:clamp(5rem,14vw,9rem);font-weight:900;background:linear-gradient(45deg,#4ecdc4,#00a86b,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;font-variant-numeric:tabular-nums;line-height:1;}
@@ -72,9 +54,6 @@
 
     .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:100px 40px;border-radius:44px;text-align:center;margin:120px auto;box-shadow:0 35px 90px rgba(255,107,53,0.6);opacity:0;transform:scale(0.9);transition:all 1.4s cubic-bezier(0.22,1,0.36,1);}
     .final-cta.visible{opacity:1;transform:scale(1);}
-
-    .whatsapp-float{position:fixed;bottom:30px;right:30px;width:68px;height:68px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:36px;box-shadow:0 10px 30px rgba(37,211,102,0.7);z-index:999;animation:float 6s ease-in-out infinite;}
-    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-20px)}}
   </style>
 </head>
 <body>
@@ -99,62 +78,62 @@
   </div>
 </div>
 
-<!-- Your perfect sections unchanged -->
+<!-- All your perfect sections below — unchanged -->
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
   AOS.init({once:true,duration:1400,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  const observer = new IntersectionObserver((e)=>{e.forEach(en=>{if(en.isIntersecting){en.target.classList.add('visible');en.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*180));}})},{threshold:0.15});
-  document.querySelectorAll('section, .final-cta').forEach(el=>observer.observe(el));
-
-  // PARTICLES NOW PERFECTLY OUTLINE AFRICA (no silhouette)
+  // WORLD-CLASS AFRICA OUTLINE + GLOWING TRAILS + PARALLAX
   particlesJS("particles-js", {
     "particles": {
-      "number": { "value": 220 },
-      "color": { "value": ["#006400","#007a3d","#00a86b","#00d084"] },
-      "shape": { "type": "circle" },
-      "opacity": { "value": 0.95, "random": true },
-      "size": { "value": 4.5, "random": true },
-      "line_linked": { "enable": false },
-      "move": {
-        "enable": true,
-        "speed": 0.8,
-        "direction": "none",
-        "random": true,
-        "straight": false,
-        "out_mode": "out",
-        "attract": { "enable": true, "rotateX": 600, "rotateY": 1200 }
-      }
-    },
-    "interactivity": {
-      "detect_on": "canvas",
-      "events": { "onhover": { "enable": true, "mode": "repulse" }}
-    },
-    "retina_detect": true,
-    "config_demo": {
-      "hide_card": true,
-      "background_color": "#00000",
+      "number": { "value": 280 },
+      "color": { "value": ["#00a86b", "#008c4a", "#00c67a"] },
       "shape": {
         "type": "image",
         "image": {
           "src": "https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg",
-          "width": 900,
-          "height": 900
+          "width": 1000,
+          "height": 1000
         }
       },
-      "particles": {
-        "move": {
-          "enable": true,
-          "speed": 1,
-          "attract": { "enable": true }
-        }
+      "opacity": { "value": 0.9, "random": true },
+      "size": { "value": 5, "random": true },
+      "line_linked": { "enable": false },
+      "move": {
+        "enable": true,
+        "speed": 0.7,
+        "direction": "none",
+        "random": true,
+        "straight": false,
+        "out_mode": "out",
+        "trail": { "enable": true, "length": 15, "opacity": 0.6 }
       }
-    }
+    },
+    "interactivity": {
+      "detect_on": "canvas",
+      "events": {
+        "onhover": { "enable": true, "mode": "repulse" },
+        "onclick": { "enable": true, "mode": "push" },
+        "resize": true
+      },
+      "modes": {
+        "repulse": { "distance": 120, "duration": 0.8 }
+      }
+    },
+    "retina_detect": true
   });
 
-  // Fluid animated counter
+  // Subtle parallax on scroll
+  window.addEventListener('scroll', () => {
+    const scrolled = window.pageYOffset;
+    const parallax = document.getElementById('particles-js');
+    const speed = scrolled * 0.3;
+    parallax.style.transform = `translateY(${speed}px) translateZ(-100px) scale(1.1)`;
+  });
+
+  // Fluid counter
   const counter = document.getElementById('counter');
   const target = 1247;
   let count = 0;
@@ -168,6 +147,19 @@
       counter.textContent = Math.floor(count).toLocaleString();
     }
   }, 20);
+
+  // Card & list animations
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+        entry.target.querySelectorAll('li').forEach((li, i) => {
+          setTimeout(() => li.classList.add('visible'), i * 180);
+        });
+      }
+    });
+  }, { threshold: 0.15 });
+  document.querySelectorAll('section, .final-cta').forEach(el => observer.observe(el));
 </script>
 </body>
 </html>
