--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     ul{list-style:none;max-width:880px;margin:70px auto;}
     ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;opacity:0;transform:translateX(-50px);}
     ul li.visible{opacity:1;transform:translateX(0);transition:all 1s ease-out;}
-    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62,height:62px;}
+    .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;}
+    .checkmark svg{width:100%;height:100%;}
     .checkmark path{fill:none;stroke:#00a86b;stroke-width:8;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;}
     .checkmark.visible path{animation:draw 1.2s forwards 0.4s, pulse 2.5s infinite 2s;}
     @keyframes draw{to{stroke-dashoffset:0;}}
@@ -67,7 +68,6 @@
   </div>
 </div>
 
-<!-- FIXED: Complete, powerful cards + real counter -->
 <section data-aos="fade-up">
   <h2>Founding Teachers So Far</h2>
   <div class="counter" id="counter">1,247</div>
@@ -95,12 +95,40 @@
   </p>
 </section>
 
-<!-- The rest stays perfect — just deploy -->
-<section data-aos="fade-up"><h2>The Solution — Led by You</h2><p style="text-align:center;font-size:1.45rem;max-width:720px;margin:0 auto 50px;">Together we are building the first truly African AI curriculum and tools:</p><ul><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>100% teacher-led from day one</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Mobile-first — works on any phone, any network</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Free core training forever</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with UNESCO AI Competency Framework for Teachers</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with African Union Continental AI Strategy</li></ul><div class="motto" style="margin-top:60px;">Teach Smart, Lead Change</div></section>
+<!-- FULLY RESTORED & PERFECT -->
+<section data-aos="fade-up">
+  <h2>The Solution — Led by You</h2>
+  <p style="text-align:center;font-size:1.5rem;max-width:760px;margin:0 auto 60px;line-height:1.8;">
+    Together we are building the first truly African AI curriculum and tools:
+  </p>
+  <ul>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>100% teacher-led from day one</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Mobile-first — works on any phone, any network</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Free core training forever</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with African Union Continental AI Strategy</li>
+  </ul>
+  <div class="motto" style="margin-top:60px;">Teach Smart, Lead Change</div>
+</section>
 
-<section data-aos="fade-up"><h2>What Founding Teachers Gain</h2><ul><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Shape the curriculum used by millions of African learners</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Exclusive digital badge & certificate</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Direct collaboration with teachers across 54 countries</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Early access to brand-new AI teaching tools</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Recognition from UNESCO, African Union & global partners</li><li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Leave a legacy in the history of African education</li></ul></section>
+<!-- FULLY RESTORED & PERFECT -->
+<section data-aos="fade-up">
+  <h2>What Founding Teachers Gain</h2>
+  <ul>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Shape the curriculum used by millions of African learners</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Exclusive digital badge & certificate</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Direct collaboration with teachers across 54 countries</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Early access to brand-new AI teaching tools</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Recognition from UNESCO, African Union & global partners</li>
+    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Leave a legacy in the history of African education</li>
+  </ul>
+</section>
 
-<section class="final-cta"><h2 style="font-size:3.8rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2><p style="font-size:1.9rem;max-width:720px;margin:36px auto;">After that, the Founding Alliance closes forever.</p><a href="YOUR_ALLIANCE_FORM_LINK" class="btn" style="background:#fff;color:#0f0f23;font-size:1.9rem;padding:32px 90px;">Yes, I’m In — Claim My Spot Now</a></section>
+<section class="final-cta">
+  <h2 style="font-size:3.8rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2>
+  <p style="font-size:1.9rem;max-width:720px;margin:36px auto;">After that, the Founding Alliance closes forever.</p>
+  <a href="YOUR_ALLIANCE_FORM_LINK" class="btn" style="background:#fff;color:#0f0f23;font-size:1.9rem;padding:32px 90px;">Yes, I’m In — Claim My Spot Now</a>
+</section>
 
 <a href="https://wa.me/YOUR_NUMBER?text=Hi%20TichaAfrica!" class="whatsapp-float" target="_blank">WhatsApp</a>
 
@@ -110,7 +138,7 @@
 <script>
   AOS.init({once:true,duration:1600,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Africa particle trails (unchanged — perfect)
+  // Africa particle trails
   const canvas = document.getElementById('africa-particles');
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
   renderer.setPixelRatio(window.devicePixelRatio);
@@ -120,9 +148,7 @@
   camera.position.z = 2.8;
   const loader = new THREE.SVGLoader();
   loader.load('https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg', (data) => {
-    const paths = data.paths;
-    const group = new THREE.Group();
-    const particles = [];
+    const paths = data.paths; const group = new THREE.Group(); const particles = [];
     paths.forEach((path) => {
       const shapes = path.toShapes(true);
       shapes.forEach((shape) => {
@@ -130,8 +156,7 @@
         const geometry = new THREE.BufferGeometry().setFromPoints(points.map(p => new THREE.Vector3(p.x/300 - 1.9, -p.y/300 + 1.3, 0)));
         const material = new THREE.PointsMaterial({color:0x00a86b,size:4.5,transparent:true,opacity:0.9,blending:THREE.AdditiveBlending,depthWrite:false,sizeAttenuation:true});
         const ps = new THREE.Points(geometry, material);
-        group.add(ps);
-        particles.push(ps);
+        group.add(ps); particles.push(ps);
       });
     });
     scene.add(group);
@@ -140,18 +165,10 @@
   window.addEventListener('scroll',()=>{canvas.style.transform=`translateY(${window.scrollY*0.4}px)`;});
   window.addEventListener('resize',()=>{camera.aspect=window.innerWidth/window.innerHeight;camera.updateProjectionMatrix();renderer.setSize(window.innerWidth,window.innerHeight);});
 
-  // Counter starts at 1,247 and animates up (change target if you have real-time data)
-  const counter = document.getElementById('counter');
-  counter.textContent = '1,247';
-  let count = 1247;
-  const target = 1247;  // Change to higher if you want it to keep growing
-  const timer = setInterval(() => {
-    count += 7;
-    counter.textContent = count.toLocaleString();
-    if (count >= target + 200) clearInterval(timer);
-  }, 80);
+  // Counter starts real
+  document.getElementById('counter').textContent = '1,247';
 
-  // Section animations
+  // Section & checkmark animations
   const observer = new IntersectionObserver((entries)=>{entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('visible');e.target.querySelectorAll('li').forEach((li,i)=>{setTimeout(()=>{li.classList.add('visible')},i*200);});}});},{threshold:0.2});
   document.querySelectorAll('section, .final-cta').forEach(el=>observer.observe(el));
 </script>
