--- a/index.html
+++ b/index.html
@@ -104,29 +104,87 @@
 </section>
 
 <section data-aos="fade-up">
+<!-- THE SOLUTION — LED BY YOU (FIXED) -->
+<section data-aos="fade-up">
   <h2>The Solution — Led by You</h2>
-  <p style="text-align:center;font-size:1.5rem;max-width:760px;margin:0 auto 60px;line-height:1.8;">
+  <p style="text-align:center;font-size:1.5rem;max-width:760px;margin:0 auto 60px;line-height:1.8;color:#e8f0ff;">
     Together we are building the first truly African AI curriculum and tools:
   </p>
-  <ul>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>100% teacher-led from day one</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Mobile-first — works on any phone, any network</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Free core training forever</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with UNESCO AI Competency Framework for Teachers</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Fully aligned with African Union Continental AI Strategy</li>
+  <ul style="list-style:none;max-width:880px;margin:70px auto;">
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      100% teacher-led from day one
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Mobile-first — works on any phone, any network
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Free core training forever
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Fully aligned with UNESCO AI Competency Framework for Teachers
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Fully aligned with African Union Continental AI Strategy
+    </li>
   </ul>
   <div class="motto" style="margin-top:60px;">Teach Smart, Lead Change</div>
 </section>
 
+<!-- WHAT FOUNDING TEACHERS GAIN (FIXED) -->
 <section data-aos="fade-up">
   <h2>What Founding Teachers Gain</h2>
-  <ul>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Shape the curriculum used by millions of African learners</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Exclusive digital badge & certificate</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Direct collaboration with teachers across 54 countries</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Early access to brand-new AI teaching tools</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Recognition from UNESCO, African Union & global partners</li>
-    <li><div class="checkmark"><svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10"/></svg></div>Leave a legacy in the history of African education</li>
+  <ul style="list-style:none;max-width:880px;margin:70px auto;">
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Shape the curriculum used by millions of African learners
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Exclusive digital badge & certificate
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Direct collaboration with teachers across 54 countries
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Early access to brand-new AI teaching tools
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Recognition from UNESCO, African Union & global partners
+    </li>
+    <li style="font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;color:#ffffff;">
+      <div class="checkmark" style="position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;">
+        <svg viewBox="0 0 24 24"><path d="M4.5 12.5l5 5 10-10" fill="none" stroke="#00a86b" stroke-width="8" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      </div>
+      Leave a legacy in the history of African education
+    </li>
   </ul>
 </section>
 
