--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <p data-aos="fade-up" data-aos-delay="200">The continent’s first teacher-led, mobile-first AI training movement — built by African teachers, for African teachers.</p>
     <div class="motto" data-aos="zoom-in" data-aos-delay="400">Teach Smart, Lead Change</div>
     <div data-aos="fade-up" data-aos-delay="600">
-      <a href="YOUR_ALLIANCE_FORM_LINK" class="btn">Join Free Now (60s)</a>
+      <a href="alliance-form.html" class="btn">Join Free Now (60s)</a>
       <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Insights (2min)</a>
     </div>
   </div>
