--- a/alliance-form.html
+++ b/alliance-form.html
@@ -12,7 +12,7 @@
     .progress{position:absolute;top:0;left:0;height:6px;background:#ffd700;transition:width .6s cubic-bezier(0.16,1,0.3,1);z-index:10;}
     .step{opacity:0;transform:translateY(20px);transition:all .6s cubic-bezier(0.16,1,0.3,1);position:absolute;inset:0;padding:0 32px;display:flex;flex-direction:column;justify-content:center;}
     .step.active{opacity:1;transform:translateY(0);position:relative;}
-    h1{font-size:2.4rem;font-weight:900;text-align:center;margin-bottom:16px;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
+    h1{font-size:2.6rem;font-weight:900;text-align:center;margin-bottom:16px;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
     p{text-align:center;color:#e2e8f0;font-size:1.1rem;line-height:1.6;margin-bottom:32px;}
     label{display:block;margin-bottom:24px;}
     input, select, textarea{width:100%;padding:18px 20px;border-radius:20px;border:none;background:rgba(255,255,255,0.15);color:#fff;font-size:1.1rem;transition:all .3s;}
@@ -32,7 +32,7 @@
 
 <div class="form-container">
   <div class="progress" id="progress"></div>
-  <div class="logo"><img src="images/logo1.png" alt="TichaAfrica"></div>
+  <div class="logo"><img src="../images/logo1.png" alt="TichaAfrica"></div>
 
   <!-- Step 1 -->
   <div class="step active" data-step="1">
@@ -78,10 +78,10 @@
     <h1>Your contact</h1>
     <p>Phone number (WhatsApp preferred) or email</p>
     <input type="text" id="contact" placeholder="+234…" required>
-    <button class="btn-next" onclick="nextStep()">Continue →</button>
+    <button class="btn-next" onclick="nextStep()">Finish →</button>
   </div>
 
-  <!-- Final Step -->
+  <!-- Final Step — Thank You -->
   <div class="step" data-step="7">
     <div class="thankyou">
       <h2>You’re in! 🎉</h2>
@@ -98,47 +98,47 @@
   let current = 0;
 
   function nextStep() {
-    if (current < steps.length - 1) {
-      // Validate required fields
-      const activeInput = steps[current].querySelector('input, textarea');
-      if (activeInput && activeInput.hasAttribute('required') && !activeInput.value.trim()) {
-        activeInput.style.border = '2px solid #ff6b35';
-        activeInput.focus();
-        return;
-      }
+    const currentStep = steps[current];
+    const input = currentStep.querySelector('input, textarea');
 
-      steps[current].classList.remove('active');
-      current++;
-      steps[current].classList.add('active');
+    // Validate
+    if (input && input.hasAttribute('required') && !input.value.trim()) {
+      input.style.border = '2px solid #ff6b35';
+      input.focus();
+      return;
+    }
 
-      // Update progress bar
-      progress.style.width = (current / (steps.length - 1)) * 100 + '%';
+    // Move forward
+    currentStep.classList.remove('active');
+    current++;
+    steps[current].classList.add('active');
 
-      // Auto-focus next input
-      const nextInput = steps[current].querySelector('input, textarea');
-      if (nextInput) setTimeout(() => nextInput.focus(), 400);
+    // Update progress
+    progress.style.width = (current / (steps.length - 1)) * 100 + '%';
 
-      // Final step — submit data (replace with your actual endpoint)
-      if (current === steps.length - 1) {
-        const data = {
-          name: document.getElementById('name').value,
-          location: document.getElementById('location').value,
-          subject: document.getElementById('subject').value,
-          challenge: document.getElementById('challenge').value,
-          contact: document.getElementById('contact').value,
-          timestamp: new Date().toISOString()
-        };
+    // Auto-focus next field
+    const nextInput = steps[current].querySelector('input, textarea');
+    if (nextInput) setTimeout(() => nextInput.focus(), 500);
 
-        // Example: send to Google Sheets, Tally, or your backend
-        console.log('Alliance member:', data);
-        // fetch('YOUR_WEBHOOK_URL', {method:'POST',body:JSON.stringify(data),headers:{'Content-Type':'application/json'}});
-      }
+    // Final step — collect data
+    if (current === steps.length - 1) {
+      const data = {
+        name: document.getElementById('name').value.trim(),
+        location: document.getElementById('location').value.trim(),
+        subject: document.getElementById('subject').value.trim(),
+        challenge: document.getElementById('challenge').value.trim(),
+        contact: document.getElementById('contact').value.trim(),
+        timestamp: new Date().toISOString()
+      };
+      console.log('New Founding Teacher:', data);
+      // Replace with your real endpoint (Tally, Google Sheets, etc.)
+      // fetch('YOUR_WEBHOOK_URL', {method:'POST',body:JSON.stringify(data),headers:{'Content-Type':'application/json'}});
     }
   }
 
   // Allow Enter key to proceed
   document.addEventListener('keydown', e => {
-    if (e.key === 'Enter' && document.activeElement.tagName === 'INPUT' || document.activeElement.tagName === 'TEXTAREA') {
+    if (e.key === 'Enter' && !e.shiftKey) {
       e.preventDefault();
       nextStep();
     }
